--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Choose your Revision!</title>
-  </head>
+<html>
+<head>
+<title>School Revision</title>
+</head>
+<body>
+<h1>Welcome</h1>
+<p>
+<a href="game2048" target="_self">Maths Revision</a>
+</p>
+</body>
 </html>
